# MLAPP-Solutions

./: .gitignore  Cholesky decomp derivative.ipynb  Makefile  README.md  chapter-12.tex  chapter-13.tex  chapter-14.tex  chapter-18.tex  chapter-21.tex  chapter-24.tex  chapter-26.tex  chapter-5.tex  chapter-6.tex  chapter-7.tex  chapter-8.tex  chapter-9.tex  pyproject.toml  template.tex
notebooks/: ABF.ipynb  ABF.py  Occasionally Dishonest Casino.ipynb  Untitled.ipynb  adaptive_basis_functions.ipynb  delete-me.ipynb  dirichlet-gaussian-mixture.ipynb  dirichlet_gaussian_mixture.ipynb  dirichlet_gaussian_mixture.py  gaussian-posterior-approx.ipynb  gaussian-process.ipynb  gaussian_posterior_approx.py  gaussian_posterior_approximation.ipynb  gibbs-sampling.ipynb  gibbs_sampling_gaussian.ipynb  hidden_markov_model.ipynb  ising-denoise.ipynb  ising_denoise.ipynb  kernel-pca.ipynb  kernel_pca.ipynb  rejection-sampling.ipynb  rejection_sampling.ipynb  reverse-kl-divergence.ipynb  utils.py
notebooks/.ipynb_checkpoints/: kernel-pca-checkpoint.ipynb
src/mlapp_models/: __init__.py  abstract.py  adaptive_basis_functions.py  dirichlet_gaussian_mixture.py  gaussian_posterior_approximation.py  gaussian_process.py  hidden_markov_model.py  hidden_markov_models.py  kernel_pca.py  (+2 more)
tex/: chapter-10.tex  chapter-11.tex  chapter-12.tex  chapter-13.tex  chapter-14.tex  chapter-17.tex  chapter-18.tex  chapter-19.tex  chapter-20.tex  chapter-21.tex  chapter-23.tex  chapter-24.tex  chapter-25.tex  chapter-26.tex  chapter-5.tex  chapter-6.tex  chapter-7.tex  chapter-8.tex  chapter-9.tex
(+11 files in other folders)
