[tool.poetry]
name = "mlapp-models"
version = "0.1.0"
description = "Implementations of Kevin Murphy's _Machine Learning: A Probabilistic Perspective_"
authors = ["stevenjin8 <stevenjin8@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
numba = "^0.53.1"
pytest = "^6.2.4"
tqdm = "^4.61.2"
scipy = "^1.7.0"
sklearn = "^0.0"
coverage = {extras = ["toml"], version = "^5.5"}
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
isort = "4.2.5"
pylint = "^2.9.5"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
include = ["src/**.py"]

[tool.pylint]
disable = ["invalid-name"]
